# kindlebt

./: .clang-format  .clang-format-ignore  .gitignore  Doxyfile  Makefile  README.md  meson.build  meson.options  shell.nix
.github/workflows/: build.yml  docs.yml
examples/: basic_usage.c
include/kindlebt/: compat_ace.h  compat_ace_implementations.h  compat_ace_internals.h  compat_ace_shims.h  compat_acealloc.h  kindlebt.h  kindlebt_application.h  kindlebt_defines.h  kindlebt_log.h  kindlebt_utils.h
manual/: DoxygenLayout.xml  building.md  darkroot.md  header.html  installation.md  limitations.md
src/: compat_ace.c  compat_ace_handler.c  compat_ace_implementations.c  compat_ace_shims.c  compat_ace_utils.c  compat_acealloc.c  kindlebt.c  kindlebt_application.c  kindlebt_callbacks.c  kindlebt_log.c  kindlebt_utils.c  main.c  main.cpp
src/include/: ace_bt.h  compat_ace.h  compat_ace_handler.h  compat_ace_implementations.h  compat_ace_internals.h  compat_ace_shims.h  compat_ace_utils.h  compat_acealloc.h  kindlebt.h  kindlebt_defines.h  kindlebt_log.h  kindlebt_utils.h
src/include/ace/: ace_modules.h  bluetooth_api.h  bluetooth_beacon_api.h  bluetooth_beacon_clients.h  bluetooth_beacon_defines.h  bluetooth_ble_api.h  bluetooth_ble_defines.h  bluetooth_ble_gatt_client_api.h  bluetooth_common_api.h  bluetooth_defines.h  bluetooth_session_api.h  osal_alloc.h  queue.h
subprojects/: ace_bt_headers.wrap  darkroot.wrap  logc.wrap
subprojects/packagefiles/ace_bt_headers/: meson.build
subprojects/packagefiles/darkroot/: meson.build
subprojects/packagefiles/logc/: meson.build  meson.options
